refactor: 에브리타임 시간표 사진 인식 모델 GPT-5-nano로 변경 및 레거시 제거(Responses API로 변경)